# ChristianMod

./: CMakeLists.txt  README.md  about.md  mod.json  support.md
Coding Projects/: desktop.ini
Coding Projects/CPP/: desktop.ini
Coding Projects/CPP/FirstVSProject/: FirstVSProject.sln
Coding Projects/CPP/FirstVSProject/FirstVSProject/: FirstVSProject.cpp  FirstVSProject.vcxproj  FirstVSProject.vcxproj.filters
Coding Projects/CPP/FirstVSProject/FirstVSProject/x64/Release/: FirstVSProject.exe.recipe  FirstVSProject.iobj  FirstVSProject.ipdb
Coding Projects/CPP/FirstVSProject/FirstVSProject/x64/Release/FirstVSProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FirstVSProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Coding Projects/CPP/HelloWorld/: HelloWorld.cpp
Coding Projects/CPP/TheCasino/: main.cpp
notes/: hayft feelings
resources/: dailybibleversesNIV.txt  verses.txt
src/: ChristianModScene.cpp  ChristianModScene.hpp  HAYFT_Popup.cpp  HAYFT_Popup.hpp  main.cpp
src/ChristianModLayer/: ChristianModLayer.cpp  ChristianModLayer.hpp
src/ChristianModScene/: ChristianModScene.cpp  ChristianModScene.hpp
src/HAYFT_Popup/: HAYFT_Popup.cpp  HAYFT_Popup.hpp
src/Hooks/CustomCreatorLayer/: CustomCreatorLayer.cpp
src/Utils/: Utils.hpp
